Updated home page texts

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -347,8 +347,8 @@
   "Your account has been suspended.": "Вашият акаунт е спрян.",
   "Find and match with people by personality and interests.": "Намери хора по характер и интереси.",
   "length": "символа",
-  "Vinteres is a dating website with the main goal to match people by personality and interests.": "Vinteres е сайт за запознанства, който се цели да сближи хора по общ характер и взаимни интереси.",
-  "Because compatability matters. Automatically show people with high compatability percentage to you.": "Защото съвместимостта има значение. Автоматично показване на хора с висок процент на съпоставимост с вас.",
+  "Vinteres is a dating website with the main goal to match people by personality and interests. For building serious relationships.": "Vinteres е сайт за запознанства, който се цели да сближи хора по общ характер и взаимни интереси. За изграждане на серйозни връзки.",
+  "Automatically show people with high compatability percentage to you.": "Автоматично показване на хора с висок процент на съпоставимост с вас.",
   "Completely free.": "Напълно безплатно.",
   "Your current city": "Градът, където живееш"
 }
