Added image verifications

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -73,7 +73,7 @@
   "Height": "Ръст",
   "Invalid height": "Невалиден ръст",
   "cm": "см",
-  "Body type": "Физика",
+  "Body type": "Телосложение",
   "Fit": "Във форма",
   "Curvy": "Закръглен/а",
   "Average": "Средно",
@@ -196,12 +196,12 @@
   "I don't fit in with ordinary people": "Не се вписвам с обикновените хора",
   "I have always felt different from other people": "Винаги съм се чувствал различен от другите хора",
   "I have no problem getting along with most people": "Нямам проблем да се разбирам с повечето хора",
-  "Intros": "Интрота",
-  "Intros that people have sent to you.": "Изпратени интрота до теб.",
+  "Intros": "Въведения",
+  "Intros that people have sent to you.": "Изпратени въведения до теб.",
   "No intros yet.": "Няма намерени резултати.",
   "You can": "Може да",
   "find people": "намериш хора тук",
-  "and send intros to them.": "и ти да им изпратиш интро.",
+  "and send intros to them.": "и ти да им изпратиш въведение.",
   "Check people with": "Виж хора с",
   "higher compatability percentage": "по-голям процент на съвместимост",
   "to you.": "с теб",
@@ -211,7 +211,7 @@
   "People who visited my profile.": "Хора, които са посетили моят профил.",
   "No views yet.": "Няма намерени резултати.",
   "To get matched with someone": "За да съвпаднете с някого трябва да",
-  "like intros": "харесаш интро",
+  "like intros": "харесаш въведение",
   "sent to you or": "изпратено към теб или да",
   "No one to chat with. You don't have any matches yet.": "За да е активен чатът трябва да имаш съвпадания.",
   "Account Info": "Информация за Акаунта",
@@ -250,8 +250,8 @@
   "Image upload": "Качване на снимки",
   "View images": "Виж снимките",
   "Unmatch": "Премахни",
-  "They have sent you an intro!": "Изпратили са ти интро!",
-  "You have sent an intro to them": "Изпратили сте интро към тях",
+  "They have sent you an intro!": "Изпратили са ти въведение!",
+  "You have sent an intro to them": "Изпратили сте въведение към тях",
   "Photo rules:": "Правила за качване на снимки:",
   "You must be in the picture": "Трябва да си в снимката",
   "Show your face": "Покажи си лицето",
@@ -290,7 +290,7 @@
   "in": "в",
   "Age": "Години",
   "City": "Град",
-  "has liked your intro. You are now matched!": "хареса интрото ти и съвпаднахте!",
+  "has liked your intro. You are now matched!": "хареса въведението ти и съвпаднахте!",
   "and you are now matched!": "и ти съвпаднахте!",
   "has viewed your profile.": "посети профилът ти.",
   "No chat history": "Няма история",
@@ -319,20 +319,20 @@
   "YEARS_AGO": "преди {{d}} години",
   "Find people": "Намери хора",
   "Matches": "Съвпадения",
-  "Views": "Посещения",
+  "Views": "Посетили ме",
   "Compatability": "Съвместимост",
   "Notifications": "Известия",
   "No notifications yet.": "Няма намерени резултати.",
   "No matches yet.": "Няма намерени резултати.",
   "Smile": "Прати усмивка",
-  "Send intro": "Прати интро",
+  "Send intro": "Прати въведение",
   "Today at": "Днес от",
   "Yesterday at": "Вчера от",
   "Location changed": "Локацията е сменена",
   "Report sent": "Успешно докладвахте",
   "Error": "Възникна грешка",
-  "Intro sent": "Интрото е изпратено",
-  "Error sending intro": "Възникна грешка при пращането на интрото",
+  "Intro sent": "Въведението е изпратено",
+  "Error sending intro": "Възникна грешка при пращането на въведението",
   "You are now matched!": "Вие съвпаднахте!",
   "Error saving": "Възникна грешка при записването",
   "Password changed": "Паролата е променена",
@@ -358,5 +358,27 @@
   "Give a face to your profile. Having a photo drastically increases your chance for a match.": "Дайте лице на вашия профил. Наличието на снимка драстично увеличава шансовете ви да съвпаднете с някого.",
   "Congratulations!": "Поздравления!",
   "Go to app": "Влез в приложението",
-  "You have completed the personality quiz!": "Успешно попълнихте тестът за личност!"
+  "You have completed the personality quiz!": "Успешно попълнихте тестът за личност!",
+  "Verify your profile": "Верифицирай профилът ти",
+  "and show that it is really you!": "и покажи, че наистина си ти!",
+  "Verified profiles are prioritised in searches and listings.": "Верифицираните профили се приоритизират при търсения и показване.",
+  "Verification Request": "Заявка за Верификация",
+  "verification pending": "верификацията се обработва",
+  "verify profile": "верифицирай се",
+  "verified": "верифициран",
+  "Please take a photo with the following gesture:": "Моля направете снимка със следната поза:",
+  "Tap on image to retake image": "Натиснете изображението, за да снимате отново",
+  "Tap on video to capture image": "Натиснете видеото, за да снимате",
+  "Send for verification": "Изпрати за верификация",
+  "Verification request sent": "Заявката за верификация изпратена",
+  "You must upload a profile image before you request verification.": "Трябва да имате профилна снимка, за да заявите верификация,",
+  "Why should I verify my profile?": "Защо да си верифицирам профилът?",
+  "You show people that it's really you": "Показвате на другите хора, че наистина сте вие",
+  "Your profile will be prioritised in searches and listings": "Профилът ви се приоритизира при търсения",
+  "When you're verified then ONLY other verified people can contact you": "Когато сте верифицирани то тогава само други верифицирани хора могат да ви пращат въведения",
+  "How does verification work?": "Как става верификацията?",
+  "Take a photo (from your current device) with the target gesture and submit it. The verification photo will be compared to your profile picture": "Снимай се (от текущото ти устройство) с дадената поза и изпрати заявката. Снимката от верификацията се сравнява с профилната ви снимка",
+  "Start verification": "Започни",
+  "You must be verified to send": "Трябва да сте верифицирани, за да можете",
+  "an intros to this user.": "да изпратите въведение към този потребител."
 }
