Updated design styles and added new features
- Changed app logo
- Added 2 new profile option - work and education (in onboarding page and settings page)
- changed button colors to primary color (same as logo)
- Updated user page to include Looking for
- Added search preference edit from user page (trigger from new Looking for segment)
- Updated styles

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -118,7 +118,7 @@
   "Spending time with friend & family": "Прекарване на време с приятели и семейство",
   "Personality Quiz": "Тест за Личност",
   "Start Quiz": "Започни Теста",
-  "The goal of the personality quiz is to determine part of what your personality and beliefs are so that we can find better matches for you.": "Целта на теста е да се определи част от това каква е вашата личност и виждания, за да можем да намерим по-добри съвпадения за вас.",
+  "The goal of the personality quiz is to determine part of what your personality and beliefs are so that we can find better matches for you.": "Целта на теста е да се определи част от това каква е вашата личност и виждания, за да можем да намерим по-добри симпатии за вас.",
   "To find a better match try to answer honestly.": "За по-добри резултати се опитайте да отговаряте честно.",
   "You have successfully completed the onboarding!": "Успешно завършихте регистрацията си!",
   "Done": "Готово",
@@ -178,7 +178,7 @@
   "Very important": "Доста",
   "To date": "Да излизам с хора",
   "To meet new people": "Да се запозная с нови хора",
-  "Hookups": "Да намеря кокого за една вечер",
+  "Hookups": "Нещо за една вечер",
   "To see what happens": "Да видя какво ще се случи",
   "At my home or visiting friends": "Вкъщи или на гости на приятели",
   "Doing stuff outdoors": "Правене на дейности на открито",
@@ -213,7 +213,7 @@
   "To get matched with someone": "За да съвпаднете с някого трябва да",
   "like intros": "харесаш въведение",
   "sent to you or": "изпратено към теб или да",
-  "No one to chat with. You don't have any matches yet.": "За да е активен чатът трябва да имаш съвпадания.",
+  "No one to chat with. You don't have any matches yet.": "За да е активен чатът трябва да имаш симпатии.",
   "Account Info": "Информация за Акаунта",
   "Profile Info": "Информация за Профилът",
   "Security": "Смяна на парола",
@@ -318,7 +318,7 @@
   "YEAR_AGO": "преди година",
   "YEARS_AGO": "преди {{d}} години",
   "Find people": "Намери хора",
-  "Matches": "Съвпадения",
+  "Matches": "Симпатии",
   "Views": "Посетили ме",
   "Compatability": "Съвместимост",
   "Notifications": "Известия",
@@ -383,5 +383,37 @@
   "an intros to this user.": "да изпратите въведение към този потребител.",
   "Enter": "Въведете",
   "symbols": "символа",
-  "Underage not allowed": "Не е разрешено за лица под 18 години"
+  "Underage not allowed": "Не е разрешено за лица под 18 години",
+  "No, but I want them": "Не, но искам да имам",
+  "No and I don't them": "Не и не искам да имам",
+  "Rather not tell": "Предпочитам да не споделям",
+  "Education": "Образование",
+  "Work": "Работа",
+  "Work & Education": "Работа и образование",
+  "Full-time": "Пълен работен ден",
+  "Part-time": "Половин работен ден",
+  "Freelancer": "Свободна практика",
+  "Self-employed": "Самоосигуряващ се",
+  "Unemployed": "Безработен",
+  "Retired": "Пенсиониран",
+  "Doesn't have children, but wants them": "Нямам деца, но искам да има",
+  "Doesn't have children and doesn't want them": "Нямам и не искам да има деца",
+  "Long-term dating": "Дългосрочна връзка",
+  "Short-term dating": "Краткосрочна връзка",
+  "Friends": "Приятели",
+  "What's looking for": "Какво търся",
+  "wants": "и искам",
+  "male:looking_for": "Мъж съм",
+  "female:looking_for": "Жена съм",
+  "male:wants": "Мъж",
+  "female:wants": "Жена",
+  "Chat": "Съобщения",
+  "My profile": "Моят профил",
+  "Selected LOOKING_FOR:": "",
+  "No selected LOOKING_FOR.": "Нма избранни.",
+  "What I'm looking for here": "Какво търся тук",
+  "Where I'm looking": "Къде търся",
+  "Search preferences": "Предпочитания за търсене",
+  "Family": "Семейство",
+  "Lifestyle": "Начин на живот"
 }
