Update responsive desing
- User page updates
- Modal dialog fixed close button

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -415,5 +415,6 @@
   "Where I'm looking": "Къде търся",
   "Search preferences": "Предпочитания за търсене",
   "Family": "Семейство",
-  "Lifestyle": "Начин на живот"
+  "Lifestyle": "Начин на живот",
+  "Close": "Затвори"
 }
