Replaced intro logic with like
Replaced sending an intro (smile, text, audio or video) with
liking (and sending optional message)

- replaced send intro button with like on user page
- there is no intro logic anymore
- added like modal that has optional message to send
- changed "intros" path to "likes"
- changed all "intro" related texts with "like"
- changed "itros" page to use "user-item" with text (if like
  has a message)

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -196,23 +196,15 @@
   "I don't fit in with ordinary people": "Не се вписвам с обикновените хора",
   "I have always felt different from other people": "Винаги съм се чувствал различен от другите хора",
   "I have no problem getting along with most people": "Нямам проблем да се разбирам с повечето хора",
-  "Intros": "Въведения",
-  "Intros that people have sent to you.": "Изпратени въведения до теб.",
-  "No intros yet.": "Няма намерени резултати.",
+  "Likes": "Харесвания",
+  "People who liked me.": "Хора, които са ме харесали.",
+  "No likes yet.": "Няма намерени резултати.",
   "You can": "Може да",
-  "find people": "намериш хора тук",
-  "and send intros to them.": "и ти да им изпратиш въведение.",
-  "Check people with": "Виж хора с",
-  "higher compatability percentage": "по-голям процент на съвместимост",
-  "to you.": "с теб",
   "Compatabilities": "Съвместимости",
   "People with high compatability percentage to me.": "Хора с по-голям процент на съвместимост с теб.",
   "No compatabilities yet.": "Няма намерени резултати.",
   "People who visited my profile.": "Хора, които са посетили моят профил.",
   "No views yet.": "Няма намерени резултати.",
-  "To get matched with someone": "За да съвпаднете с някого трябва да",
-  "like intros": "харесаш въведение",
-  "sent to you or": "изпратено към теб или да",
   "No one to chat with. You don't have any matches yet.": "За да е активен чатът трябва да имаш симпатии.",
   "Account Info": "Информация за Акаунта",
   "Profile Info": "Информация за Профилът",
@@ -250,8 +242,8 @@
   "Image upload": "Качване на снимки",
   "View images": "Виж снимките",
   "Unmatch": "Премахни",
-  "They have sent you an intro!": "Изпратили са ти въведение!",
-  "You have sent an intro to them": "Изпратили сте въведение към тях",
+  "They have liked you!": "Харесали са те!",
+  "You have liked them": "Вече сте ги харесали",
   "Photo rules:": "Правила за качване на снимки:",
   "You must be in the picture": "Трябва да си в снимката",
   "Show your face": "Покажи си лицето",
@@ -290,20 +282,13 @@
   "in": "в",
   "Age": "Години",
   "City": "Град",
-  "has liked your intro. You are now matched!": "хареса въведението ти и съвпаднахте!",
+  "has liked you. You are now matched!": "те хареса и съвпаднахте!",
   "and you are now matched!": "и ти съвпаднахте!",
   "has viewed your profile.": "посети профилът ти.",
   "No chat history": "Няма история",
   "Show older": "Покажи по-стари",
   "Your message...": "Напиши нещо...",
-  "Sent a message": "Изпрати съобщение",
-  "Sent an audio": "Изпрати аудио запис",
-  "Sent a video": "Изпрати видео запис",
-  "Sent a smile": "Изпрати усмивка",
-  "They sent you a message": "Изпратили са ти съобщение",
-  "They sent you an audio": "Изпратили са ти аудио запис",
-  "They sent you a video": "Изпратили са ти видео запис",
-  "They sent you a smile": "Изпратили са ти усмивка",
+  "They have liked you": "Харесали са те",
   "few seconds ago": "току що",
   "MINUTE_AGO": "преди минута",
   "MINUTES_AGO": "преди {{d}} минути",
@@ -325,14 +310,12 @@
   "No notifications yet.": "Няма намерени резултати.",
   "No matches yet.": "Няма намерени резултати.",
   "Smile": "Прати усмивка",
-  "Send intro": "Прати въведение",
   "Today at": "Днес от",
   "Yesterday at": "Вчера от",
   "Location changed": "Локацията е сменена",
   "Report sent": "Успешно докладвахте",
   "Error": "Възникна грешка",
-  "Intro sent": "Въведението е изпратено",
-  "Error sending intro": "Възникна грешка при пращането на въведението",
+  "Like sent": "Въведението е изпратено",
   "You are now matched!": "Вие съвпаднахте!",
   "Error saving": "Възникна грешка при записването",
   "Password changed": "Паролата е променена",
@@ -379,8 +362,7 @@
   "How does verification work?": "Как става верификацията?",
   "Take a photo (from your current device) with the target gesture and submit it. The verification photo will be compared to your profile picture": "Снимай се (от текущото ти устройство) с дадената поза и изпрати заявката. Снимката от верификацията се сравнява с профилната ви снимка",
   "Start verification": "Започни",
-  "You must be verified to send": "Трябва да сте верифицирани, за да можете",
-  "an intros to this user.": "да изпратите въведение към този потребител.",
+  "You must be verified to like this user.": "Трябва да сте потвърдени, за да харесате този потребител.",
   "Enter": "Въведете",
   "symbols": "символа",
   "Underage not allowed": "Не е разрешено за лица под 18 години",
@@ -416,5 +398,8 @@
   "Search preferences": "Предпочитания за търсене",
   "Family": "Семейство",
   "Lifestyle": "Начин на живот",
-  "Close": "Затвори"
+  "Close": "Затвори",
+  "Write optional intro message...": "Може да напишете незадължително съобщение за въвеждане...",
+  "Like": "Харесай",
+  "Cancel": "Затвори"
 }
