Added option to edit bio on own profile

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -401,5 +401,7 @@
   "Close": "Затвори",
   "Write optional intro message...": "Може да напишете незадължително съобщение за въвеждане...",
   "Like": "Харесай",
-  "Cancel": "Затвори"
+  "Cancel": "Затвори",
+  "Write something about you...": "Напиши нещо за теб...",
+  "Write something here...": "Напиши нещо тук..."
 }
