Changed bulgarian "verify" translation and added other small fixes
- Changed Bulgarian "верифициран" to "потвърден"
- Fixed a bug for editting empty user description on user profile
- Added verified icon for verified users on likes page
- Added title for like message on user item (if has any message)

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -315,7 +315,6 @@
   "Location changed": "Локацията е сменена",
   "Report sent": "Успешно докладвахте",
   "Error": "Възникна грешка",
-  "Like sent": "Въведението е изпратено",
   "You are now matched!": "Вие съвпаднахте!",
   "Error saving": "Възникна грешка при записването",
   "Password changed": "Паролата е променена",
@@ -342,24 +341,25 @@
   "Congratulations!": "Поздравления!",
   "Go to app": "Влез в приложението",
   "You have completed the personality quiz!": "Успешно попълнихте тестът за личност!",
-  "Verify your profile": "Верифицирай профилът ти",
+  "Verify yourself": "Потвърди се",
   "and show that it is really you!": "и покажи, че наистина си ти!",
-  "Verified profiles are prioritised in searches and listings.": "Верифицираните профили се приоритизират при търсения и показване.",
-  "Verification Request": "Заявка за Верификация",
-  "verification pending": "верификацията се обработва",
-  "verify profile": "верифицирай се",
-  "verified": "верифициран",
+  "Verified profiles are prioritised in searches and listings.": "Потвърдените профили се приоритизират при търсения и показване.",
+  "Verification Request": "Заявка за Потвърждение",
+  "verification pending": "потвърждението се обработва",
+  "verify profile": "потвърди се",
+  "verified": "потвърден",
+  "Verified with photo": "Потвърден със снимка",
   "Please take a photo with the following gesture:": "Моля направете снимка със следната поза:",
   "Tap on image to retake image": "Натиснете изображението, за да снимате отново",
   "Tap on video to capture image": "Натиснете видеото, за да снимате",
-  "Send for verification": "Изпрати за верификация",
-  "Verification request sent": "Заявката за верификация изпратена",
-  "You must upload a profile image before you request verification.": "Трябва да имате профилна снимка, за да заявите верификация,",
-  "Why should I verify my profile?": "Защо да си верифицирам профилът?",
+  "Send for verification": "Изпрати за преглед",
+  "Verification request sent": "Заявката за потвърждение изпратена",
+  "You must upload a profile image before you request verification.": "Трябва да имате профилна снимка, за да заявите преглед за потвърждение,",
+  "Why should I verify my profile?": "Защо да се потвърдя?",
   "You show people that it's really you": "Показвате на другите хора, че наистина сте вие",
   "Your profile will be prioritised in searches and listings": "Профилът ви се приоритизира при търсения",
-  "When you're verified then ONLY other verified people can contact you": "Когато сте верифицирани то тогава само други верифицирани хора могат да ви пращат въведения",
-  "How does verification work?": "Как става верификацията?",
+  "When you're verified then ONLY other verified people can contact you": "Когато сте потвърдени то тогава само други потвърдени хора могат да се свържат с вас",
+  "How does verification work?": "Как става потвърждението?",
   "Take a photo (from your current device) with the target gesture and submit it. The verification photo will be compared to your profile picture": "Снимай се (от текущото ти устройство) с дадената поза и изпрати заявката. Снимката от верификацията се сравнява с профилната ви снимка",
   "Start verification": "Започни",
   "You must be verified to like this user.": "Трябва да сте потвърдени, за да харесате този потребител.",
