Updated verify modal flow

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -403,5 +403,8 @@
   "Like": "Харесай",
   "Cancel": "Затвори",
   "Write something about you...": "Напиши нещо за теб...",
-  "Write something here...": "Напиши нещо тук..."
+  "Write something here...": "Напиши нещо тук...",
+  "Don't worry - no one else will see the photo.": "Никой друг няма да види тази снимка.",
+  "Take photo": "Снимай се",
+  "Retake photo": "Снимай се отново"
 }
