Fixed "compatability" typo to "compatibility"

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -200,9 +200,9 @@
   "People who liked me.": "Хора, които са ме харесали.",
   "No likes yet.": "Няма намерени резултати.",
   "You can": "Може да",
-  "Compatabilities": "Съвместимости",
-  "People with high compatability percentage to me.": "Хора с по-голям процент на съвместимост с теб.",
-  "No compatabilities yet.": "Няма намерени резултати.",
+  "Compatibilities": "Съвместимости",
+  "People with high compatibility percentage to me.": "Хора с по-голям процент на съвместимост с теб.",
+  "No compatibilities yet.": "Няма намерени резултати.",
   "People who visited my profile.": "Хора, които са посетили моят профил.",
   "No views yet.": "Няма намерени резултати.",
   "No one to chat with. You don't have any matches yet.": "За да е активен чатът трябва да имаш симпатии.",
@@ -305,7 +305,7 @@
   "Find people": "Намери хора",
   "Matches": "Симпатии",
   "Views": "Посетили ме",
-  "Compatability": "Съвместимост",
+  "Compatibility": "Съвместимост",
   "Notifications": "Известия",
   "No notifications yet.": "Няма намерени резултати.",
   "No matches yet.": "Няма намерени резултати.",
@@ -325,12 +325,12 @@
   "No cities found.": "Няма намерени резултати.",
   "mutual interests": "общи интереси",
   "mutual activities": "общи дейности",
-  "Compatability percentage to me": "Процент съвместимост с мен",
+  "Compatibility percentage to me": "Процент съвместимост с мен",
   "Your account has been suspended.": "Вашият акаунт е спрян.",
   "Find and match with people by personality and interests.": "Намери хора по характер и интереси.",
   "length": "символа",
   "Vinteres is a dating website with the main goal to match people by personality and interests. For building serious relationships.": "Vinteres е сайт за запознанства, който се цели да сближи хора по общ характер и взаимни интереси. За изграждане на серйозни връзки.",
-  "Automatically show people with high compatability percentage to you.": "Автоматично показване на хора с висок процент на съпоставимост с вас.",
+  "Automatically show people with high compatibility percentage to you.": "Автоматично показване на хора с висок процент на съпоставимост с вас.",
   "Completely free.": "Напълно безплатно.",
   "Your current city": "Градът, където живееш",
   "Messages": "Съобщения",
