Updated onboarding steps
- Added name to account info step
- Added title and description to new second step (about me)
- Switched add add photo and quiz place (quiz is now last step)
- add skip for "about me", "profile info", "interests" and "photo" steps
- Added stepper component for showing current step

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -36,10 +36,12 @@
   "Looking for": "Търся",
   "Required field": "Задължително поле",
   "Birthday": "Рожден ден",
-  "Title": "Титла",
+  "Title": "На кратко",
   "About": "За мен",
+  "About me": "За мен",
   "From": "От къде съм",
-  "Tell something about you": "Разкажи малко за себе си",
+  "Tell something about you": "Разкажи малко повече за теб",
+  "Description about you": "Описание за мен",
   "Your job, education...": "Къде учиш, позиция на работа т.н.",
   "year": "година",
   "month": "месец",
@@ -79,7 +81,6 @@
   "Average": "Средно",
   "Skinny": "Слаб/а",
   "Interests": "Интереси",
-  "Step": "Стъпка",
   "Selected hobbies:": "Избрани хобита:",
   "No selected hobbies.": "Няма избрани хобита.",
   "All hobbies:": "Всички хобита:",
@@ -209,7 +210,7 @@
   "Account Info": "Информация за Акаунта",
   "Profile Info": "Информация за Профилът",
   "Security": "Смяна на парола",
-  "Account": "Деактивиране",
+  "Deactivate Account": "Деактивиране",
   "Invalid title": "Невалидна титла",
   "Invalid description": "Невалидно описание",
   "Settings saved": "Настройките са запазени",
@@ -406,5 +407,10 @@
   "Write something here...": "Напиши нещо тук...",
   "Don't worry - no one else will see the photo.": "Никой друг няма да види тази снимка.",
   "Take photo": "Снимай се",
-  "Retake photo": "Снимай се отново"
+  "Retake photo": "Снимай се отново",
+  "e.g. Georgi Petrov": "примерно Георги Петров",
+  "Profile": "Профил",
+  "Photo": "Снимка",
+  "Personality:stepper": "Личност",
+  "Description": "Описание"
 }
