--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -18,5 +18,6 @@
   "male:wants": "Male",
   "female:wants": "Female",
   "Selected LOOKING_FOR:": "",
-  "No selected LOOKING_FOR.": ""
+  "No selected LOOKING_FOR.": "",
+  "Personality:stepper": "Personality"
 }
