Added translations for profile questions, new quiz q&a and new free time activities

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -410,5 +410,87 @@
   "Profile": "Профил",
   "Photo": "Снимка",
   "Personality:stepper": "Личност",
-  "Description": "Описание"
+  "Description": "Описание",
+  "No one else will be able to see your answers.": "Никой друг няма да види отговорите ви.",
+  "How long do your romantic relationships usually last?": "Колко дълго продължават романтичните ви връзки?",
+  "Years": "Години",
+  "Few weeks": "Няколко седмици",
+  "Not very long": "Не много дълго",
+  "What's your deal with harder drugs?": "Употребявали ли сте трвърди наркотици?",
+  "I've used them sometimes": "Употребявал/а съм ги няколко пъти",
+  "I use them often": "Често ги употребявам",
+  "I've never used them": "Никога не съм употребявал/а",
+  "Are you either vegetarian or vegan?": "Вие вегетарианец ли сте или веган?",
+  "Vegetarian": "Вегетарианец",
+  "Vegan": "Веган",
+  "Neither": "Нито едно",
+  "How often do you brush your teeth?": "Колко често си миете зъбите?",
+  "After every meal": "След всяко хранене",
+  "Few times a day": "Няколко пъти на ден",
+  "Few times a week": "Няколко пъти на седмица",
+  "Not very ofter": "Не много често",
+  "How often do you shower?": "Колко често се къпете или взимате душ?",
+  "Would you date a smoker?": "Бихте ли излизали с пушач?",
+  "Could you date someone who does drugs?": "Бихте ли могли да излизате с някой, който употребява наркотици?",
+  "How much does physical attractiveness matter to you in a match?": "Какво значение има физическата привлекателност за вас при съвпадането с някой?",
+  "It's very important": "Много е важно",
+  "It's somewhat important": "Не е много е важно",
+  "It doesn't matter": "Няма значение",
+  "Would you date someone just for the sex?": "Бихте ли излизали с някого само заради секса?",
+  "Is astrological sign important in a match?": "Зодията има ли значени при съвпадането с някой?",
+  "Is it a requirement that you communicate every day with your parthner?": "Изискване ли е да общувате всеки ден с партньора си?",
+  "Do you feel obligated to help other humans?": "Чувствате ли се задължени да помагате на други хора?",
+  "Not sure": "Не съм сигурен",
+  "How often do you play video games?": "Колко често играете видео игри?",
+  "I don't": "Не го правя",
+  "How often do you meditate?": "Колко често медитирате?",
+  "How often do you use social media?": "Колко често използване социална медия?",
+  "I'm constantly on it": "Постоянно ползвам",
+  "Few times week": "Няколко пъти на седмица",
+  "I don't use it": "Не използвам",
+  "Would you consider having an open relationship (where you can see other people)?": "Бихте ли имали открита връзка (където можете да се виждате с други хора)?",
+  "The first thing people notice about me.": "Първото нещо, което хората забелязват за мен.",
+  "My ideal first date.": "Идеалната ми първа среща.",
+  "I would describe my appearance like this": "Бих описал/а външния си вид по следния начин",
+  "The most important thing I'm looking for in a person.": "Най-важното нещо, което търся в човек.",
+  "I spend my free time.": "Прекарвам свободното си време правейки.",
+  "My best attributes.": "Най-добрите ми качества.",
+  "A relationship deal breaker for me.": "Неща във връзка, които ме карат да е прекратя.",
+  "The personality traits that I'm most proud of.": "Личностните черти, с които се гордея най-много.",
+  "The first thing I look for in a partner and/or friend.": "Първото нещо, което търся в партньор и / или приятел.",
+  "How I define beauty.": "Как определям красотата.",
+  "My family or friends would describe me as...": "Моето семейство или приятели биха ме описали като ...",
+  "Something that my family would be surprised to learn about me.": "Нещо, което семейството ми би било изненадано да научи за мен.",
+  "If I could snap my fingers and instantly make the world better, I would do...": "Ако можех да щракна с пръсти и незабавно да направя света по-добър, щях да направя ...",
+  "If I could I would make ..... unwritten rule mandatory.": "Ако можех, щях да направя ..... неписано правило задължително.",
+  "If I could live anywhere, it would it be...": "Ако можех да живея, където си поисках, то би било ...",
+  "If I could choose to do anything for a day, it would be...": "Ако можех да избера да правя нещо за един ден, то щеше да бъде ...",
+  "If I could only eat one meal for the rest of my life, it would be...": "Ако можех да ям само едно ядене до края на живота ми, то би било ...",
+  "If I could change anything about myself it would be...": "Ако можех да променя нещо за себе си, щеше да бъде ...",
+  "If I could go back in time to change one thing, it would be...": "Ако можех да се върна назад във времето, за да променя едно нещо, то би било ...",
+  "If I were a super-hero, my powers would be...": "Ако бях супер-герой, силите ми щяха да бъдат ...",
+  "My realworld super power is...": "Моята истинска супер сила е ...",
+  "My favorite vacation place...": "Любимото ми място за почивка ...",
+  "The last movie I went to...": "Последният филм, на който отидох ...",
+  "My proudest accomplishment...": "Моето най-гордо постижение ...",
+  "My most useless talent is...": "Най-безполезният ми талант е ...",
+  "My pet peeves...": "Неща, които ме дразнят...",
+  "My weaknesses...": "Моите слабости са...",
+  "My passions are...": "Страстите ми са ...",
+  "If I won the lottery I would...": "Ако спечелих от лотарията щях ...",
+  "I could not go a day without...": "Не мога да издържа един ден без ...",
+  "A popular trend that bothers me...": "Нещо на мода, което ме притеснява ...",
+  "My favorite animal...": "Любимото ми животно ...",
+  "The most daring thing I've ever done...": "Най-смелото нещо, което някога съм правил/а ...",
+  "The most unusual thing I've ever eaten...": "Най-необичайното нещо, което някога съм ял/а ...",
+  "The most embarrassing thing that has ever happened to me...": "Най-срамното нещо, което ми се е случвало ...",
+  "Most private thing that I'm willing to admit...": "Най-личното нещо, което съм готов/а да споделя ...",
+  "One day I'll be...": "Някой ден ще бъда ...",
+  "When I was small I wanted to be...": "Когато бях малък, исках да бъда ...",
+  "My life goals are...": "Целите ми в живота са ...",
+  "My dream job is...": "Мечтаната ми работа е ...",
+  "If money was no object, what would I do all day...": "Ако парите не съществуваха, какво щях да правя по цял ден ...",
+  "Jogging": "Джогинг",
+  "Going out": "Да излизам навън",
+  "Party": "Купонясване"
 }
