Changed login/sign-up page design
- Added background image
- Removed any text
- Only form left

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -492,5 +492,6 @@
   "If money was no object, what would I do all day...": "Ако парите не съществуваха, какво щях да правя по цял ден ...",
   "Jogging": "Джогинг",
   "Going out": "Да излизам навън",
-  "Party": "Купонясване"
+  "Party": "Купонясване",
+  "Dating by personality and interests.": "Запознанства по характер и интереси."
 }
