Fix painting translation

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -103,7 +103,7 @@
   "Board Games": "Настолни игри",
   "Video Games": "Видео игри",
   "Social Media": "Социална медия",
-  "Painting": "Рисуване",
+  "Painting": "Живопис",
   "Reading": "Четене",
   "Exercising": "Трениране",
   "Shopping": "Пазаруване",
