Replaced a translation phrase for personality quiz

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -424,7 +424,7 @@
   "Vegan": "Веган",
   "Neither": "Нито едно",
   "How often do you brush your teeth?": "Колко често си миете зъбите?",
-  "After every meal": "След всяко хранене",
+  "Once a day": "Веднъж на ден",
   "Few times a day": "Няколко пъти на ден",
   "Few times a week": "Няколко пъти на седмица",
   "Not very ofter": "Не много често",
