Changed looking for translations

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -382,9 +382,7 @@
   "Short-term dating": "Краткосрочна връзка",
   "Friends": "Приятели",
   "What's looking for": "Какво търся",
-  "wants": "и искам",
-  "male:looking_for": "Мъж съм",
-  "female:looking_for": "Жена съм",
+  "looks for": "търси",
   "male:wants": "Мъж",
   "female:wants": "Жена",
   "Chat": "Съобщения",
