Added custom hobbies and free time activities

--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -490,5 +490,7 @@
   "Jogging": "Джогинг",
   "Going out": "Да излизам навън",
   "Party": "Купонясване",
-  "Dating by personality and interests.": "Запознанства по характер и интереси."
+  "Dating by personality and interests.": "Запознанства по характер и интереси.",
+  "Add other hobbies...": "Добави други хобита...",
+  "Add other activities...": "Добави други дейности..."
 }
